# photoflow

./: .env  .gitignore  pyproject.toml
photoflow/: manage.py
photoflow/core/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
photoflow/core/migrations/: 0001_initial.py  0002_auto_20240601_1259.py  0003_message.py
photoflow/photoflow/: asgi.py  settings.py  urls.py  wsgi.py
photoflow/static/css/: styles.css
photoflow/templates/: base.html
photoflow/templates/core/: messages.html  notifications.html  post_detail.html  post_form.html  post_list.html
photoflow/templates/includes/: header.html
photoflow/templates/users/: login.html  profile.html  signup.html
photoflow/users/: admin.py  forms.py  models.py  urls.py  views.py
photoflow/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_customuser_username.py  0004_customuser_profile_picture.py  0005_alter_customuser_profile_picture.py
